[tool.poetry]
name = "ml-training-workflow"
version = "0.1.0"
description = ""
authors = ["Lucas Olini <lucasolini96@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_training_workflow"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
